--- a/Visualization2/index.html
+++ b/Visualization2/index.html
@@ -9,8 +9,8 @@
 
   <!-- Import Vega & Vega-Lite -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5.30.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-lite@5.21.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-embed@6.26.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.21.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.26.0"></script>
 
   <!-- Import pure.css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
@@ -133,7 +133,7 @@
     </div>
   </div>
 
-  <!-- Embed Vega-Lite Visualizations -->
+  <!-- Vega-Lite Visualizations -->
   <script>
     var vg_1 = "PotatoChart.json";
     vegaEmbed("#potato", vg_1, {"actions": false}).then(function(result) {}).catch(console.error);
