--- a/Visualization2/index.html
+++ b/Visualization2/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <!-- FIRST ROW OF VISUALISATIONS -->
+    <!-- Row 1 Visualisations -->
     <div class="pure-g">
       <div class="pure-u-1-2 center">
         <div id="potato" class="medium-height"></div> <!-- PotatoChart -->
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <!-- Description for first row -->
+    <!-- Paragraph first row -->
     <div class="pure-g">
       <div class="pure-u-1-2">
         <p class="small-font"><span class="south-australia">South Australia</span> has been a significant region for the production of 
@@ -80,10 +80,11 @@
     <!-- CattleMap Centered -->
     <div class="pure-g">
       <div class="pure-u-1-1" style="display: flex; justify-content: center; align-items: center;">
-        <div id="cattle"></div> <!-- Centered CattleMap -->
+        <div id="cattle"></div> 
       </div>
     </div>
 
+    <!-- Paragraph second row -->
     <div class="pure-g">
       <div class="pure-u-1-1">
         <p class="small-font">While examining the total number of cattles in Australia, <span class ="queensland">Queensland</span> is shown to have the highest amount of Cattles in the region, followed by <span class ="new-south-wales">New South Wales</span>, <span class ="victoria">Victoria</span>, <span class ="western-australia">Western Australia</span>, <span class ="northern-territory">Northern Territory</span>, <span class="south-australia">South Australia</span> and <span class ="tasmania">Tasmania</span>.
@@ -100,7 +101,7 @@
         </div>
       </div>
 
-    <!-- SECOND ROW OF VISUALISATIONS -->
+    <!-- Row 2 visualisations -->
     <div class="pure-g">
     <div class="pure-u-1-2 center">
         <div id="area" class="large-height"></div> <!-- AreaChart -->
@@ -110,7 +111,7 @@
       </div>
     </div>
 
-    <!-- Description for second row -->
+    <!-- Paragraph third row -->
     <div class="pure-g">
       <div class="pure-u-1-2">
         <p class="small-font">The cultivation of wheat in Australia is always changing in each Region. Notably, <span class ="australian-capital-territory">Australian Capital Territory</span> had a large plot of land to cultivate wheat in 2012 but a sharp decrease was seen in 2015. For the <span class ="northern-territory">Northern Territory</span>,
@@ -124,7 +125,7 @@
       </div>
     </div>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
     <div class="pure-g">
       <div class="pure-u-1-1 small-font center">
         <p>This visualization was created by Joseph Ti. Data sources: <a
